tests/NormalTests/paczka1/small_fuzzy/60941887.err
Error in line 2: q87yAbIQM A77 16,9
Error in line 1: A367 S851 85,4
